--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,6 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.tencent.sonic:sdk:1.1.1'
-    compile 'com.google.code.gson:gson:2.7'
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.12'
     testCompile 'junit:junit:4.12'
 }
